--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               </div>
               
               <div class="form-group text-center">
-                <button type="submit" class="btn btn-primary" style="width: 100%;">Sign in</button>
+                <button type="submit" class="btn btn-primary" style="width: 100%;">Submit</button>
               </div>
             </form>
           </div>
@@ -290,4 +290,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
